CSS: fix align utility
# Conflicts:
#	panel/src/components/Navigation/DropdownContent.vue

--- a/panel/src/styles/utilities.css
+++ b/panel/src/styles/utilities.css
@@ -1,12 +1,12 @@
 /* Align */
 [data-align="left"] {
-  text-align: start;
+  --algin: start;
 }
 [data-align="center"] {
-  text-align: center;
+  --algin: center;
 }
 [data-align="right"] {
-  text-align: end;
+  --algin: end;
 }
 
 /* Invalid */
